I think I fixed mobile scrolling?

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1 class="email-date">Friday, August 28</h1>
     <h2 class="email-time">5:58 p.m.</h2>
 </div>
+<article class="content-container">
     <div id="email-notif"><h2 class = "email-notif-text">1 new email</h2>
     
        </div>
@@ -71,6 +72,7 @@
         <p>“I think the Class of 2024 is experiencing FOMO, to say the least,” Vandayar said. “We’re really trying to take that extra step to rebuild a little bit of what we’ve lost, even if it’s through Zoom calls.</p>
         <h3 class="footer-credits">Design and development: David Deloso for North by Northwestern Interactive</h3>
       </main>
+    </article>
     </body>
     
 
