added navbar functionality and pullquotes + minor tweaks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="email-body email-blurred ">We realize this will create real inconvenience and disappointment for many of you, but the lower density of our campus and housing facilities will help us in our efforts to contain the virus and provide more space to accommodate the isolation and testing that we now anticipate will be needed.</p>
 
     </div>
-    <figcaption>Click to expand</figcaption>
+    <figcaption class="click-prompt">Click to expand</figcaption>
     <div class="article-top-info"><h1 class="article-hed">First contact</h1>
         <h2 class="article-dek">With their arrival to campus delayed, students in Northwestern’s Class of 2024 find community virtually.</h2>
         <h3 class="article-byline">by David Deloso</h3>
@@ -68,8 +68,12 @@
             “Honestly, I feel like if I see Joanne on campus, it will feel like I’m talking to one of my high school friends because we’ve talked so much and connected a lot over quarantine,” Bian said.
 
         </p>
+        <blockquote class="pquote">
+            <h2>“We’re really trying to take that extra step to rebuild a little bit of what we’ve lost, even if it’s through Zoom calls.”</h2>
+            <h3 class="attribution">-- McCormick first-year Sahana Vandayar</h3>
+        </blockquote>
         <p>Although first-year students have found community online, many are anxious to meet their classmates in-person. Until campus reopens for them, however, this will have to wait. </p>
-        <p>“I think the Class of 2024 is experiencing FOMO, to say the least,” Vandayar said. “We’re really trying to take that extra step to rebuild a little bit of what we’ve lost, even if it’s through Zoom calls.</p>
+        <p>“I think the Class of 2024 is experiencing FOMO, to say the least,” Vandayar said. “We’re really trying to take that extra step to rebuild a little bit of what we’ve lost, even if it’s through Zoom calls.”</p>
         <h3 class="footer-credits">Design and development: David Deloso for North by Northwestern Interactive</h3>
       </main>
     </article>
